[gd_scene load_steps=7 format=3 uid="uid://bhquqa76uchg5"]

[ext_resource type="Script" path="res://scenes/push_stone/push_stone.gd" id="1_dpde5"]
[ext_resource type="Texture2D" uid="uid://datksrpo40y4g" path="res://art/overworld_sprites/fantasy_ [version 2.0]/forest_/forest_ [resources].png" id="2_fcpmu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a6adl"]
size = Vector2(6.5, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cq0bs"]
size = Vector2(6, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5hntq"]
size = Vector2(12, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w23fp"]
size = Vector2(12, 3)

[node name="push_stone" type="CharacterBody2D"]
script = ExtResource("1_dpde5")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_fcpmu")
region_enabled = true
region_rect = Rect2(65.9638, 48.6143, 12.2304, 12.5901)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-6, -2, 6, -2, 6, 6, -6, 6)

[node name="right" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="right"]
position = Vector2(4.75, 0)
shape = SubResource("RectangleShape2D_a6adl")

[node name="left" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="left"]
position = Vector2(-5, 0)
shape = SubResource("RectangleShape2D_cq0bs")

[node name="down" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="down"]
position = Vector2(0, 5.5)
shape = SubResource("RectangleShape2D_5hntq")

[node name="up" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="up"]
position = Vector2(0, -5.5)
shape = SubResource("RectangleShape2D_w23fp")

[connection signal="body_entered" from="right" to="." method="_on_right_body_entered"]
[connection signal="body_exited" from="right" to="." method="_on_right_body_exited"]
[connection signal="body_entered" from="left" to="." method="_on_left_body_entered"]
[connection signal="body_exited" from="left" to="." method="_on_left_body_exited"]
[connection signal="body_entered" from="down" to="." method="_on_down_body_entered"]
[connection signal="body_exited" from="down" to="." method="_on_down_body_exited"]
[connection signal="body_entered" from="up" to="." method="_on_up_body_entered"]
[connection signal="body_exited" from="up" to="." method="_on_up_body_exited"]
